# manager

./: HungClusterManager_resource.rc  Manager.pro  Manager.pro.user.741fd50  README.md  alphanum.h  clientworker.cpp  clientworker.h  contactinfoform.cpp  contactinfoform.h  contactinfoform.ui  contactpage.cpp  contactpage.h  contactpage.ui  doubleclickedbutton.cpp  doubleclickedbutton.h  formfortest.cpp  formfortest.h  formfortest.ui  ftpdownloaddialog.cpp  ftpdownloaddialog.h  ftpdownloaddialog.ui  ftpuploaddialog.cpp  ftpuploaddialog.h  ftpuploaddialog.ui  ftpworker.cpp  ftpworker.h  highlighter.cpp  highlighter.h  hungclustermanager1.qrc  ipcworker.cpp  ipcworker.h  ipcworkerii.cpp  ipcworkerii.h  loginpage.cpp  loginpage.h  loginpage.ui  loginpageii.cpp  loginpageii.h  loginpageii.ui  m.cpp  (+39 more)
sourceCode/: CMakeLists.txt
sourceCode/ClusterManagement/: CMakeLists.txt  ClusterManagementMain.cpp  ClusterManagementProcess.cpp  ClusterManagementProcess.cpp~  ClusterManagementProcess.h  ClusterMgtClientType.h  ClusterMgtClientsManagement.cpp  ClusterMgtClientsManagement.h  ClusterMgtConnectionAcceptor.cpp  ClusterMgtConnectionAcceptor.h  ClusterMgtConnectionReceiver.cpp  ClusterMgtConnectionReceiver.h  ClusterMgtController.cpp  ClusterMgtController.h  Component.h  IClusterMgtClientsManagement.cpp  IClusterMgtClientsManagement.h  IClusterMgtController.cpp  IClusterMgtController.h
sourceCode/ClusterMgtMessage/: CMakeLists.txt  ClusterMgtMessageFactory.cpp  ClusterMgtMessageFactory.h  Component.h  IClusterMgtMessage.cpp  IClusterMgtMessage.h
sourceCode/Common/: AppConst.h  CMakeLists.txt  CoredumpConfig.cpp  CoredumpConfig.h  FilePathHandler.cpp  Generic.h  LocalTime.cpp  LocalTime.h  Lock.cpp  Lock.h  Macro.h  Operator.h  Random.cpp  Random.h  RemoveCharacter.cpp  RemoveCharacter.h  Singleton.h  Sleep.h  SystemTime.cpp  SystemTime.h  TimeStat.cpp  TimeStat.h  remove_character.cpp  remove_character.h  replace_character.cpp
sourceCode/Configure/: CMakeLists.txt  Configure.cpp  Configure.h  Configure_Define.h  ExceptionConfigure.cpp  ExceptionConfigure.h  SystemEnvironmentConfigure.cpp  SystemEnvironmentConfigure.h  TraceLogConfigure.cpp  TraceLogConfigure.h
sourceCode/ConfigureManagement/: CMakeLists.txt  Component.h  MauiConfig.cpp  MauiConfig.cpp.bak  MauiConfig.h  MauiConfig.h.bak  MauiConfigFileMgt.cpp  MauiConfigFileMgt.h  MauiConfigTag.cpp  MauiConfigTag.h  NetworkConfig.cpp  NetworkConfig.h
sourceCode/ConfigureMgtMessage/: Component.h  IConfigureMgtMessage.cpp  IConfigureMgtMessage.h  MauiConfigurationAcquireRequest.cpp  MauiConfigurationAcquireRequest.h  MauiConfigurationAcquireResponse.cpp  MauiConfigurationAcquireResponse.h  MauiConfigurationUpdateRequest.cpp  MauiConfigurationUpdateRequest.h  MauiConfigurationUpdateResponse.cpp  MauiConfigurationUpdateResponse.h
sourceCode/Connection/: CMakeLists.txt  IConnectionMessage.cpp  IConnectionMessage.h  IConnectionRx.cpp  IConnectionRx.h  IConnectionTx.cpp  IConnectionTx.h
sourceCode/Core/: CMakeLists.txt  Component.h  EventLoop.cpp  EventLoop.h  IoLoop.cpp  IoLoop.h  LoopMain.cpp  LoopMain.h  TimerLoop.cpp  TimerLoop.h
sourceCode/Environment/: CMakeLists.txt  Component.h  ComputerNodeInfo.cpp  ComputerNodeInfo.h  CpuInfo.cpp  CpuInfo.h  CpuInfoBriefly.cpp  CpuInfoBriefly.h  CpuInfoDataType.cpp  CpuInfoDataType.h  CpuUsage.cpp  CpuUsage.h  CpuUsageCalculator.cpp  CpuUsageCalculator.h  CpuUsageDataType.cpp  CpuUsageDataType.h  CpuUsageInfo.cpp  CpuUsageInfo.h  DiskUsageInfo.cpp  DiskUsageInfo.h  Environment.cpp  Environment.h  EnvironmentSystemInfomation.cpp  EnvironmentSystemInfomation.h  IShellCommand.cpp  IShellCommand.h  MemoryInfo.cpp  MemoryInfo.h  MemoryInfoBriefly.cpp  MemoryInfoBriefly.h  MemoryUsageInfo.cpp  MemoryUsageInfo.h  MemoryUsageInfoDataType.cpp  MemoryUsageInfoDataType.h  MiscInfo.cpp  MiscInfo.h  NetworkInfo.cpp  NetworkInfo.h  ShellCommandDataType.cpp  ShellCommandDataType.cpp~  (+17 more)
sourceCode/EnvironmentTest/: CMakeLists.txt  CpuInfoBrieflyTest.cpp  CpuUsageCalculatorTest.cpp  CpuUsageTest.cpp  DiskUsageInfoTest.cpp  EnvironmentTest.cpp  MemoryInfoBrieflyTest.cpp  MemoryUsageTest.cpp  MiscInfoTest.cpp  NetworkInfoTest.cpp  SystemInfoBrieflyTest.cpp
sourceCode/EventHandler/: CMakeLists.txt  Component.h  EventIdGenerator.cpp  EventIdGenerator.h  IEvent.cpp  IEvent.h  IEventQueue.cpp  IEventQueue.h  ListEventQueue.cpp  ListEventQueue.h
sourceCode/Io/: CMakeLists.txt  Component.h  IIoControl.cpp  IIoControl.h  IIoEvent.cpp  IIoEvent.h  IoControlEventsHandler.cpp  IoControlEventsHandler.h
sourceCode/Ipc/: CMakeLists.txt  Component.h  IIpcClient.cpp  IIpcClient.h  IIpcConnectionAcceptor.cpp  IIpcConnectionAcceptor.h  IIpcConnectionClientStrategy.cpp  IIpcConnectionClientStrategy.h  IIpcConnectionReceiver.cpp  IIpcConnectionReceiver.h  IIpcConnectionServerStrategy.cpp  IIpcConnectionServerStrategy.h  IIpcServer.cpp  IIpcServer.h  IpcClient.cpp  IpcClient.h  IpcClientCreator.cpp  IpcClientCreator.h  IpcConnectionTcpClientStrategy.cpp  IpcConnectionTcpClientStrategy.h  IpcConnectionTcpServerStrategy.cpp  IpcConnectionTcpServerStrategy.h  IpcConnectionTimer.cpp  IpcConnectionTimer.h  IpcHeartbeatTimer.cpp  IpcHeartbeatTimer.h  IpcServer.cpp  IpcServer.h  IpcServerCreator.cpp  IpcServerCreator.h
sourceCode/IpcMessage/: CMakeLists.txt  IIpcComunicationMessage.cpp  IIpcComunicationMessage.h  IIpcMessage.cpp  IIpcMessage.h  IIpcMessageFactory.cpp  IIpcMessageFactory.h  IIpcMessageQueue.cpp  IIpcMessageQueue.h  IpcAuthorizationRequest.cpp  IpcAuthorizationRequest.h  IpcAuthorizationResponse.cpp  IpcAuthorizationResponse.h  IpcHeartbeatReport.cpp  IpcHeartbeatReport.h  IpcLayerMessageFactory.cpp  IpcLayerMessageFactory.h  IpcMessageIdGenerator.cpp  IpcMessageIdGenerator.h  IpcMessageType.cpp  IpcMessageType.h  IpcThreadSafeMessageQueue.cpp  IpcThreadSafeMessageQueue.h
sourceCode/Network/: CMakeLists.txt  Component.h  ITcpClient.cpp  ITcpClient.h  ITcpConnectionAcceptor.cpp  ITcpConnectionAcceptor.h  ITcpConnectionReceiver.cpp  ITcpConnectionReceiver.h  ITcpServer.cpp  IpPort.h  (+21 more)
sourceCodebk/: CMakeLists.txt
(+183 files in other folders)
